# hrms

./: .pre-commit-config.yaml  manage.py  pyproject.toml
core_hrms/: asgi.py  settings.py  urls.py  wsgi.py
